<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/introLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/intro_logo"
                app:srcCompat="@drawable/intro_logo" />

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textSize="31sp"
                />

            <TextView
                android:id="@+id/introDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_description"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/grey"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/introButton"
                style="@android:style/Widget.Button"
                android:layout_margin="32dp"
                android:background="@drawable/purple_button_bg"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/intro_button" />

            <TextView
                android:id="@+id/introSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/intro_sign_in" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>